[project]
name = "mmcopilot_mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "dotenv>=0.9.9",
  "fastmcp>=2.13.2",
  "google>=3.0.0",
  "google-genai>=1.53.0",
  "httpx>=0.28.1",
  "mm-strategy-create",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.1",
  "typing>=3.10.0.0",
]

[tool.uv.sources]
mm-strategy-create = { git = "https://github.com/SureshAmal/CreateStrategyOpenAPI" }
